--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,7 @@
 /*MOBILE SCREENS*/
-
 body {
     font-family: Arial;
     background-color: #161d2e;
-}
-
-.logo {
-    width: 90px;
 }
 
 .hero {
@@ -38,6 +33,23 @@ body {
     object-fit: cover;
 }
 
+.hero-image {
+    display: none; /* Hide image by default */
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: black; /* Optional fallback background color */
+    z-index: 1;
+}
+
+.hero-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
 .hero .caption {
     position: relative;
     z-index: 20;
@@ -50,6 +62,13 @@ body {
 
 }
 
+.hero-video {
+    display: none; /* Hide video on mobile */
+}
+
+.hero-image {
+    display: block; /* Show image on mobile */
+}
 
 @keyframes float {
     0% {
@@ -318,6 +337,24 @@ a {
 }
 #jumpContact {
     scroll-margin-top: 100px;
+}
+.hero-video,
+.hero-image {
+    display: none;
+}
+
+/* Mobile Screens */
+@media (max-width: 599px) {
+    .hero-image {
+        display: block;
+    }
+}
+
+/* Larger Screens */
+@media (min-width: 600px) {
+    .hero-video {
+        display: block;
+    }
 }
 
 /*LARGE SCREENS*/
