--- a/styles.css
+++ b/styles.css
@@ -61,10 +61,6 @@ body {
     display: none; /* Hide video on mobile */
 }
 
-/*.hero-image {*/
-/*    display: block; !* Show image on mobile *!*/
-/*}*/
-
 .hero .caption h2 {
     animation: float 3s ease-in-out infinite;
 }
@@ -89,7 +85,6 @@ body {
     margin-bottom: 3rem;
 }
 
-/*navbar*/
 .topnav {
     overflow: hidden;
     background-color: rgba(0,0,0,0.4);
@@ -108,6 +103,11 @@ body {
     text-decoration: none;
     font-size: 17px;
     display: block;
+    transition: 1s;
+}
+
+.topnav a:hover {
+    color: lightblue;
 }
 
 topnav .icon {
@@ -122,12 +122,6 @@ topnav .icon {
     top: 0;
 }
 
-.active {
-    /*background-color: #04AA6D;*/
-    color: white;
-}
-/*end of nav bar*/
-
 .aboutMeSection {
     color: white;
     margin: 0px 60px;
@@ -136,7 +130,6 @@ topnav .icon {
 .aboutMeCard h1 {
     font-family: Pangaia;
     font-size: 1.8rem;
-
 }
 
 .aboutMeCard {
@@ -156,19 +149,19 @@ topnav .icon {
 
 .socialIcons a {
     color: white;
-    font-size: 2rem; /* Larger size */
+    font-size: 2rem;
     padding: 10px;
     text-decoration: none;
-    z-index: 50; /* Ensure icons appear above the video */
+    z-index: 50;
+}
+
+.socialIcons a:hover {
+    color: lightblue;
 }
 
 .aboutMeContainer {
     display: flex;
     flex-direction: column;
-}
-
-.emmaPhoto {
-    width: 250px;
 }
 
 .emma {
@@ -181,9 +174,9 @@ a {
 }
 
 .hey {
-    display: inline-block; /* Ensures the element behaves correctly for transform */
-    position: relative; /* Allows precise movement within its parent */
-    transition: transform 0.3s ease; /* Smooth animation */
+    display: inline-block;
+    position: relative;
+    transition: transform 0.3s ease;
 }
 
 .hey:hover {
@@ -192,13 +185,11 @@ a {
 
 .portfolioSection {
     display: grid;
-    /*grid-template-columns: repeat(3, 1fr); !* Responsive grid *!*/
     grid-template-columns: repeat(auto-fit, minmax(250px, 1fr)); /* Responsive grid */
-    gap: 3rem; /* Space between cards */
+    gap: 3rem;
     padding: 2rem;
     max-width: 1200px;
     margin-right: 30px;
-    /*margin-top: 70px;*/
 }
 
 #upArrow {
@@ -214,6 +205,32 @@ a {
     margin-top: 10px;
 }
 
+.liveBtn {
+    border-radius: 14px;
+    cursor: pointer;
+    background-color: transparent;
+    border: 1px solid white;
+    color: white;
+}
+
+.liveBtn:hover {
+    color: black;
+    background-color: white;
+    transition: 0.6s;
+}
+
+.gitBtn {
+    border-radius: 14px;
+    cursor: pointer;
+}
+
+.gitBtn:hover {
+    color: white;
+    background-color: transparent;
+    transition: 0.6s;
+    border: 1px solid white;
+}
+
 .projectsBtn {
     font-family: "Overpass", sans-serif;
     padding: 5px 25px;
@@ -223,6 +240,13 @@ a {
     cursor: pointer;
     margin-bottom: 40px;
     color: black;
+}
+
+.projectsBtn:hover {
+    color: lightblue;
+    background-color: transparent;
+    border: 1px solid lightblue;
+    transition: 0.6s;
 }
 
 .card {
@@ -290,14 +314,30 @@ a {
 
 .mailto {
     font-size: 3rem;
+    transition: transform 0.3s ease-in-out, color 0.3s ease-in-out;
+}
+
+.mailto:hover {
+    color: lightblue;  /* Change text color on hover */
 }
 
 .github {
     font-size: 3rem;
+    transition: transform 0.3s ease-in-out, color 0.3s ease-in-out;
+}
+
+.github:hover {
+    color: lightblue;
 }
 
 .linkedin {
     font-size: 3rem;
+    transition: transform 0.3s ease-in-out, color 0.3s ease-in-out;
+
+}
+
+.linkedin:hover {
+    color: lightblue;
 }
 
 .tags {
@@ -320,12 +360,6 @@ a {
     color: white;
 }
 
-/*.footer {*/
-/*    color: white;*/
-/*    padding: 0;*/
-/*    text-align: center;*/
-/*}*/
-
 #jumpAboutMe {
     scroll-margin-top: 100px;
 }
@@ -335,24 +369,7 @@ a {
 #jumpContact {
     scroll-margin-top: 100px;
 }
-/*.hero-video,*/
-/*.hero-image {*/
-/*    display: none;*/
-/*}*/
 
-/*!* Mobile Screens *!*/
-/*@media (max-width: 599px) {*/
-/*    .hero-image {*/
-/*        display: block;*/
-/*    }*/
-/*}*/
-
-/*!* Larger Screens *!*/
-/*@media (min-width: 600px) {*/
-/*    .hero-video {*/
-/*        display: block;*/
-/*    }*/
-/*}*/
 
 @media (max-width: 599px) {
     .hero-video {
