--- a/styles.css
+++ b/styles.css
@@ -155,6 +155,21 @@ topnav .icon {
     z-index: 50;
 }
 
+.downloadBtn {
+    border: 1px white solid;
+    border-radius: 14px;
+    background-color: transparent;
+    color: white;
+    padding: 0 6px;
+    transition: 0.6s;
+}
+
+.downloadBtn:hover {
+    background-color: white;
+    color: black;
+
+}
+
 .socialIcons a:hover {
     color: lightblue;
 }
