--- a/styles.css
+++ b/styles.css
@@ -385,6 +385,33 @@ a {
     scroll-margin-top: 100px;
 }
 
+/*blog section*/
+.navBarBlog {
+    text-align: right;
+    padding-right: 10px;
+    padding-top: 10px;
+}
+.blogSection {
+    color: white;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    text-align: center;
+    padding: 30px;
+    line-height: 1.6;
+}
+
+.post1  {
+    text-align: left;
+    border: white solid 1px;
+    padding: 20px;
+}
+.post2  {
+    text-align: left;
+    border: white solid 1px;
+    padding: 20px;
+}
+
 @media (max-width: 599px) {
     .hero-video {
         display: none;
@@ -557,4 +584,5 @@ a {
         font-size: 18px;
         cursor: pointer;
     }
+
 }
