--- a/styles.css
+++ b/styles.css
@@ -386,30 +386,49 @@ a {
 }
 
 /*blog section*/
+.navBarBlog a:hover {
+    color: lightblue;
+}
+
 .navBarBlog {
     text-align: right;
-    padding-right: 10px;
-    padding-top: 10px;
+    font-size: 17px;
+    padding: 14px 16px;
 }
+
+.blogHero {
+    background-color: lightblue;
+    padding: 30px;
+    text-align: center;
+}
+
 .blogSection {
     color: white;
+    margin: 20px;
     display: flex;
     flex-direction: column;
     justify-content: center;
     text-align: center;
     padding: 30px;
     line-height: 1.6;
+    font-size: 19px;
 }
 
 .post1  {
     text-align: left;
     border: white solid 1px;
-    padding: 20px;
+    padding: 40px;
+    margin-bottom: 30px;
 }
+
 .post2  {
     text-align: left;
     border: white solid 1px;
-    padding: 20px;
+    padding: 40px;
+}
+
+.blog2image1, .blog2image2 {
+    width: 1000px;
 }
 
 @media (max-width: 599px) {
