--- a/styles.css
+++ b/styles.css
@@ -425,9 +425,17 @@ a {
     text-align: left;
     border: white solid 1px;
     padding: 20px;
+    margin-bottom: 30px;
 }
 
-.blog2image1, .blog2image2 {
+.post3  {
+    text-align: left;
+    border: white solid 1px;
+    padding: 20px;
+    margin-bottom: 30px;
+}
+
+.blog2image1, .blog2image2, .blog3image1, .blog3image2, .blog3image3{
     width: 70vw;
 }
 
@@ -643,9 +651,17 @@ a {
         text-align: left;
         border: white solid 1px;
         padding: 40px;
+        margin-bottom: 30px;
     }
 
-    .blog2image1, .blog2image2 {
+    .post3  {
+        text-align: left;
+        border: white solid 1px;
+        padding: 20px;
+        margin-bottom: 30px;
+    }
+
+    .blog2image1, .blog2image2, .blog3image1, .blog3image2, .blog3image3 {
         width: 70vw;
     }
 }
