--- a/styles.css
+++ b/styles.css
@@ -439,6 +439,17 @@ a {
     width: 70vw;
 }
 
+.expandBtn {
+    font-family: "Overpass", sans-serif;
+    padding: 5px 25px;
+    border-radius: 14px;
+    background-color: lightblue;
+    font-size: 18px;
+    cursor: pointer;
+    margin-bottom: 40px;
+    color: black;
+}
+
 @media (max-width: 599px) {
     .hero-video {
         display: none;
@@ -657,7 +668,7 @@ a {
     .post3  {
         text-align: left;
         border: white solid 1px;
-        padding: 20px;
+        padding: 40px;
         margin-bottom: 30px;
     }
 
