--- a/styles.css
+++ b/styles.css
@@ -442,6 +442,13 @@ a {
     margin-bottom: 30px;
 }
 
+.post5  {
+    text-align: left;
+    border: white solid 1px;
+    padding: 40px;
+    margin-bottom: 30px;
+}
+
 .blog2image1, .blog2image2, .blog3image1, .blog3image2, .blog3image3{
     width: 70vw;
 }
@@ -686,7 +693,14 @@ a {
         margin-bottom: 30px;
     }
 
-    .blog2image1, .blog2image2, .blog3image1, .blog3image2, .blog3image3 {
+    .post5  {
+        text-align: left;
+        border: white solid 1px;
+        padding: 40px;
+        margin-bottom: 30px;
+    }
+
+    .blog2image1, .blog2image2, .blog3image1, .blog3image2, .blog3image3, .blog5video1 {
         width: 70vw;
     }
 }
