mobile responsiveness for new post video

--- a/styles.css
+++ b/styles.css
@@ -449,7 +449,7 @@ a {
     margin-bottom: 30px;
 }
 
-.blog2image1, .blog2image2, .blog3image1, .blog3image2, .blog3image3{
+.blog2image1, .blog2image2, .blog3image1, .blog3image2, .blog3image3, .blog5video1{
     width: 70vw;
 }
 
