--- a/styles.css
+++ b/styles.css
@@ -449,6 +449,13 @@ a {
     margin-bottom: 30px;
 }
 
+.post6  {
+    text-align: left;
+    border: white solid 1px;
+    padding: 40px;
+    margin-bottom: 30px;
+}
+
 .blog2image1, .blog2image2, .blog3image1, .blog3image2, .blog3image3, .blog5video1{
     width: 70vw;
 }
@@ -700,7 +707,14 @@ a {
         margin-bottom: 30px;
     }
 
-    .blog2image1, .blog2image2, .blog3image1, .blog3image2, .blog3image3, .blog5video1 {
+    .post6  {
+        text-align: left;
+        border: white solid 1px;
+        padding: 40px;
+        margin-bottom: 30px;
+    }
+
+    .blog2image1, .blog2image2, .blog3image1, .blog3image2, .blog3image3, .blog5video1, .blog6image1, .blog6image2 {
         width: 70vw;
     }
 }
